syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "cs236351.txservice";

package cs236351.txservice;

service TxService {
  rpc InsertTx (Transaction) returns (google.protobuf.Empty) {}
  rpc deleteTx (TxId) returns (google.protobuf.Empty) {}
  rpc ExistsTx (TxId) returns (Exists) {}
  rpc GetTx (TxId) returns (Transaction) {}
  rpc GetAllTx (Request) returns (TransactionList) {}
  rpc SendTr (TrRequest) returns (google.protobuf.Empty) {}
  rpc RemoveUtxo (TrRequest) returns (google.protobuf.Empty) {}
  rpc RedeemTr (TrRequest) returns (UtxoList) {}
  rpc GetAllUtxo (Request) returns (UtxoList) {}
  rpc insertTxList (TransactionList) returns (google.protobuf.Empty) {}
  rpc GetLedger (Limit) returns (LedgerTxEntryList) {}
}

message TxId {
  uint64 id = 1;
}

message Transfer {
  string address = 1;
  uint64 amount = 2;
}

message Utxo {
  TxId txId = 1;
  string address = 2;
  uint64 value = 3;
}

message Transaction {
  TxId txId = 1;
  repeated Utxo inputs = 2;
  repeated Transfer outputs = 3;
}

message LedgerTxEntry {
  uint64 timestamp = 1;
  Transaction tx = 2;
}

message LedgerTxEntryList {
  repeated LedgerTxEntry txList = 1;
}

message TransactionList {
  repeated Transaction txList = 1;
}

message UtxoList {
  repeated Utxo utxoList = 1;
}

message Exists {
  bool exists = 1;
}

message TrRequest {
  string source = 1;
  TxId txId = 2;
  Transfer tr = 3;
}

message Request {
  string source = 1;
  string address = 2;
}

message Limit {
  uint64 limit = 1;
}
